* Increase effects of Wisdom on prayers.
* You can now attempt to steal from shops.
* Added crafting.
* Move saves, bones and config to user directory.
* Add LGTM code quality badges.

Fixes:
* Backtrace.
* Broken vials are no longer fixed into bottles.
* Fix wizard mode autoplay mode.
* Fix heap-use-after-free in go::Handle().
* Harden bitmap::Fill().

Version 0.54, released 2nd October 2018
---------------------------------------

Changes:
* More interesting TX final level.
* Improved look mode by using showItemsUnder.
* Limit golem spawns to GC and TX.
* Fluid rework! You can now sip only a part of a bottle's contents rather than always drink it all.
* New animations!
* Mini-map notes through engravings.
* Mouse support!
* Mouse hover over silhouette equipment will show a detailed descriptive message on log.
* Hotkey for quick weapon switching.
* Improved lights!
* Text font options added.

Fixes:
* Balance patche for the new materials.
* Fix load game in wizard mode.
* Fix some crashes on iOS.
* Fix many crashes that may happen on death.
* Fix memory leaks of message system and sound system.
* Chests that spawn with broken locks are automatically unlocked.
* Anvils and forges will no longer block your path.
* Fix memory overflow in commandsystem::ShowMap().
* Fix duplicated player after crash.
* Lower resolution to better fit scaled window.

Dev:
* Add define.dat validator for script files.
* Use chrono for rng seed instead of random_device.

Version 0.53 pre-release
------------------------

Changes:
* Optional xBRZScale now used to stretch the: full dungeon, Silhouette, inventory items, NPCs on lists.
* FrameSkip optional functionality for slow machines (or heavy CPU load as in "play while you work" :))
* You can now optionally review after death events/items/msgs using Ivan3D mode.
* Optionally always center on player after exiting LookZoom mode.
* Optionally show full dungeon name with roman level numbers.
* Grouped config options in categories.